--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -362,7 +362,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1dl-Ve-tVT">
-                                <rect key="frame" x="21" y="22" width="18" height="17"/>
+                                <rect key="frame" x="21" y="22" width="65" height="64"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Button" backgroundImage="menu.png">
                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -710,7 +710,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="K3M-nl-aa0">
-                                <rect key="frame" x="129" y="307" width="63" height="30"/>
+                                <rect key="frame" x="129" y="266" width="63" height="30"/>
                                 <state key="normal" title="Add Item">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -804,8 +804,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Ppo-Dl-Jzy"/>
         <segue reference="zio-dR-h1s"/>
-        <segue reference="uch-Om-fAx"/>
+        <segue reference="Ppo-Dl-Jzy"/>
+        <segue reference="Zye-kC-puS"/>
     </inferredMetricsTieBreakers>
 </document>
