adding obj oriented hierarchy

--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -803,8 +803,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Zye-kC-puS"/>
+        <segue reference="uch-Om-fAx"/>
+        <segue reference="zio-dR-h1s"/>
         <segue reference="Ppo-Dl-Jzy"/>
-        <segue reference="XUY-tV-1cl"/>
     </inferredMetricsTieBreakers>
 </document>
