--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -639,6 +639,7 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="KZh-kB-jLA" id="7gf-de-bPa"/>
+                        <segue destination="tZj-yi-ert" kind="modal" identifier="cellSelected" id="WnC-OQ-Do0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5N-pL-4j4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -732,6 +733,9 @@
                                                 <state key="normal" title="Back">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="4kY-hb-PhD" kind="modal" id="hht-9x-lEI"/>
+                                                </connections>
                                             </button>
                                         </barButtonItem>
                                     </navigationItem>
@@ -778,8 +782,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="79p-94-rNJ"/>
+        <segue reference="hht-9x-lEI"/>
         <segue reference="wBG-uc-FqG"/>
-        <segue reference="4o3-Yt-uu5"/>
+        <segue reference="niW-yG-t3L"/>
     </inferredMetricsTieBreakers>
 </document>
