--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -259,6 +259,9 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="1sZ-an-KTF" kind="modal" id="DyM-0b-ia2"/>
+                                </connections>
                             </button>
                             <navigationBar contentMode="scaleToFill" id="wWW-2Y-lNQ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -286,7 +289,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tv2-yC-CFw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-817" y="322"/>
+            <point key="canvasLocation" x="-803" y="295"/>
         </scene>
         <!--Title-->
         <scene sceneID="dKE-EU-azq">
@@ -308,7 +311,7 @@
                                     <navigationItem title="Items near you" id="L8e-3F-L6K">
                                         <barButtonItem key="leftBarButtonItem" style="plain" id="UDJ-MY-Ey2">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1dl-Ve-tVT">
-                                                <rect key="frame" x="16" y="6" width="27" height="31"/>
+                                                <rect key="frame" x="16" y="10" width="22" height="24"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <state key="normal" title="Button" backgroundImage="menu.png">
                                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -810,6 +813,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="Ppo-Dl-Jzy"/>
         <segue reference="zio-dR-h1s"/>
+        <segue reference="DyM-0b-ia2"/>
         <segue reference="XVg-38-SA2"/>
     </inferredMetricsTieBreakers>
 </document>
