added setting spage

--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -247,10 +247,13 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ioI-wb-t60">
                                 <rect key="frame" x="0.0" y="196" width="333" height="71"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="    Privacy Settings" backgroundImage="menubutton.png">
+                                <state key="normal" title="    Settings" backgroundImage="menubutton.png">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="PPP-ei-qCC" kind="modal" id="m0a-Sp-9zJ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="AMq-PK-kNT">
                                 <rect key="frame" x="0.0" y="264" width="333" height="71"/>
@@ -352,7 +355,7 @@
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Vws-Yq-Wb2">
                                 <rect key="frame" x="16" y="438" width="288" height="52"/>
-                                <color key="backgroundColor" red="0.43824133209999999" green="0.46532846719999998" blue="0.66583029199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.43824133209999999" green="0.46532846719999998" blue="0.66583029199999999" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Match">
                                     <color key="titleColor" white="1" alpha="0.95999999999999996" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -732,6 +735,75 @@
             </objects>
             <point key="canvasLocation" x="70" y="226"/>
         </scene>
+        <!--Save Location View Controller-->
+        <scene sceneID="yF7-2h-8YF">
+            <objects>
+                <viewController id="PPP-ei-qCC" customClass="SaveLocationViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qgS-4l-BFB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter your zipcode" minimumFontSize="17" id="Alk-0z-xt3">
+                                <rect key="frame" x="93" y="197" width="135" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="0.95999999999999996" colorSpace="calibratedWhite"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.64999999999999991"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xbM-nn-Q10">
+                                <rect key="frame" x="69" y="126" width="182" height="78"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="25"/>
+                                <color key="textColor" red="0.34123264120000002" green="0.2803026066" blue="0.53029336729999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iBE-Lc-mph">
+                                <rect key="frame" x="16" y="269" width="288" height="45"/>
+                                <color key="backgroundColor" red="0.43809876819999999" green="0.46532846719999998" blue="0.66583029199999999" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="save location">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="Fcc-LW-UbC" kind="modal" id="cEp-ok-hMN"/>
+                                </connections>
+                            </button>
+                            <navigationBar contentMode="scaleToFill" id="bNm-wX-U05">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Settings" id="FlD-A7-ttM">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="aNw-yR-mN8">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="JD1-VI-OLK">
+                                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Back">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="Fcc-LW-UbC" kind="modal" id="pMc-UB-nfd"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.48235297199999999" green="0.67450982329999998" blue="0.95294123890000004" alpha="1" colorSpace="deviceRGB"/>
+                    </view>
+                    <connections>
+                        <outlet property="locField" destination="Alk-0z-xt3" id="nVB-Uc-JAO"/>
+                        <outlet property="saveLocationButton" destination="iBE-Lc-mph" id="8uK-Et-x65"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3C9-0F-6H5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-803" y="1010"/>
+        </scene>
         <!--Single Wishlist Item View Controller-->
         <scene sceneID="aq8-Fu-i1h">
             <objects>
@@ -812,8 +884,9 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Ppo-Dl-Jzy"/>
+        <segue reference="7CO-YD-a87"/>
         <segue reference="zio-dR-h1s"/>
-        <segue reference="DyM-0b-ia2"/>
         <segue reference="XVg-38-SA2"/>
+        <segue reference="DyM-0b-ia2"/>
     </inferredMetricsTieBreakers>
 </document>
